Project

General

Profile

Actions

Fix #42775

closed

common: fix typo in rgw_user_max_buckets option long description.

Added by Alfonso Martínez over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Category:
common
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

s/unlimmited/unlimited/


Related issues 1 (0 open1 closed)

Copied to Ceph - Backport #42795: nautilus: common: fix typo in rgw_user_max_buckets option long description.ResolvedAlfonso MartínezActions
Actions #1

Updated by Alfonso Martínez over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 31571
Actions #2

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Target version deleted (v15.0.0)
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42795: nautilus: common: fix typo in rgw_user_max_buckets option long description. added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF