common: fix typo in rgw_user_max_buckets option long description.

Fixes: https://tracker.ceph.com/issues/42775
Signed-off-by: Alfonso Martínez <almartin@redhat.com>
(cherry picked from commit c91c2cea65cb42c2b92b10543366e00079f7def8)